# safestake-encode-2025

./: .gitignore  README.md  plan.md  stuff-to-do.md
backend-verifier/: .env.example  README.md  jest.config.js  package-lock.json  package.json  tsconfig.json
backend-verifier/src/: config.ts  server.ts  types.ts
backend-verifier/tests/: integration.test.ts  unit.test.ts
backend-verifier/tests/fixtures/: data.ts  mock-data.ts
contracts/safestake-registry/: Cargo.toml  params.json
contracts/safestake-registry/concordium-out/: module.wasm.v1
contracts/safestake-registry/deploy-scripts/: Cargo.toml
contracts/safestake-registry/deploy-scripts/src/: main.rs
contracts/safestake-registry/src/: lib.rs
contracts/safestake-registry/tests/: tests.rs
demo/safestake-casino/: index.html  package-lock.json  package.json
demo/safestake-casino/src/: App.tsx  config.ts  main.tsx
demo/safestake-casino/src/components/: AgeVerification.tsx  CasinoGame.tsx  WalletConnection.tsx
demo/safestake-dashboard/: index.html  package-lock.json  package.json
demo/safestake-dashboard/src/: App.tsx  config.ts
demo/safestake-dashboard/src/components/: AccountSettings.tsx  DashboardOverview.tsx  (+1 more)
demo/safestake-sportsbook/: index.html  package-lock.json  package.json
demo/safestake-sportsbook/src/: App.tsx  config.ts
sdk/: jest.config.js  package-lock.json  package.json  tsconfig.json
sdk/examples/: quick-test.js
sdk/src/: SafeStakeSDK.ts  VerifierClient.ts  index.browser.ts  index.ts  safeStakeSDK.browser.ts  types.ts
sdk/test/: SafeStakeSDK.test.ts
(+3 files in other folders)
