# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "safestake_registry"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
authors = ["sriram <ss2d22@soton.ac.uk>"]

[features]
default = ["std"]
std = ["concordium-std/std"]
bump_alloc = ["concordium-std/bump_alloc"]

[dependencies]
concordium-std = { version = "10.1" }

[dev-dependencies]
concordium-smart-contract-testing = "4.2"
ed25519-dalek = "2.2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = "s"
codegen-units = 1
